Made format changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,45 @@
         <!--This DIV has 2 classes: jumbotron and mainSec-->
         <h1 class="container" id="trailer"><iframe width="560" height="315" src="https://www.youtube.com/embed/AURVxvIZrmU" frameborder="0" allowfullscreen></iframe></h1>
 
+         </div>
+    <!-- EPISODES PREVIEW SECTION -->
+    <div class="row container previewThem">
+        <div class="col-sm-6 col-md-4">
+            <!--!!!!!!!!!!these are Colomns and the sizes are how much screen the image takes
+            can also have: col-xs-12; col-sm-12; col-med-4; col-lg-4!!!!!!!!!!!-->
 
+            <!--if Screen Size is not Specified the output will revert to the next closest size
+            if View Size Gets Smaller than any defined size, the size will switch to FULL SCREEN-->
+
+            <div class="thumbnail">
+                <img src="Content/Ep1.png" alt="Episode 1 Preview Iamge">
+                <div class="caption">
+                    <h3>Episode 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet finibus sem. Vestibulum molestie tristique nisl nec bibendum. Vivamus fringilla, erat pretium mattis accumsan, massa enim molestie sem, mattis pharetra leo nulla nec lectus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed at molestie nunc. Cras feugiat arcu enim, sit amet malesuada est ultricies non. Duis id magna finibus, molestie sapien eu, blandit ex. Nullam arcu lectus, sagittis ac diam eu, lacinia hendrerit odio. Cras rutrum nisl dapibus nibh aliquet hendrerit. Aliquam erat volutpat. Maecenas lectus ipsum, facilisis et dolor vel, auctor blandit mi. Pellentesque sed iaculis ex. Proin sed feugiat tellus, sagittis pretium metus. Sed at ipsum cursus, egestas odio nec, interdum tellus. Cras a sapien vel dolor sagittis semper a vitae dui. Nullam euismod auctor erat nec ornare.</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Play Now</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="Content/ep2.jpg" alt="Episode 2 Preview Iamge">
+                <div class="caption">
+                    <h3>Episode 2</h3>
+                    <p>In other news, Clubber Lange beats Rocky Balboa for the heavy weight championship.</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Play Now</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="Content/ep3.jpg" alt="Episode 3 Preview Image">
+                <div class="caption">
+                    <h3>Episode 3</h3>
+                    <p>Blame Canada McDonalds Thomas Jefferson Liberty Bell blonde haired, blue eyed Jesus. American football 40 acres and a mule Mr. Gorbachev, tear down this wall. The south will rise again nothing to fear but fear itself. Crippling obesity epidemic I did not have sexual relations with that woman. Florida Man safe for democracy coalition of the willing. Deep-dish trail of tears Walker, Texas Ranger y’all truck nutz. Kentucky bourbon free market mission accomplished propane and propane accessories. John Wayne Budweiser Philly cheese steak moonshine CNN’s ratings are down. Live free or die hard remember the Alamo climate change denial. Bleed red white and blue hot dog Supreme Commander Allied Forces Europe Eisenhower.</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Play Now</a></p>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
